@@ -11,7 +11,7 @@ Upstream Author(s):
     PCMan <pcman.tw@gmail.com>
     Jim Huang <jserv.tw@gmail.com>
     Kanru Chen <koster@debian.org.tw>
-    Shih-yuan Lee <fourdollars@gmail.com>
+    Shih-Yuan Lee <fourdollars@gmail.com>
     Chia I Wu <b90201047@ntu.edu.tw>
     Youchen Lee <youchen.lee@gmail.com>
     Emfox Zhou <emfoxzhou@gmail.com>
